yolo runnt und aufgeräumt
die Bilderkennung auf 3 Videos getestet. videos unter:
teams-->baba_video

--- a/yolo/analysis/ball_analysis.ipynb
+++ b/yolo/analysis/ball_analysis.ipynb
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x177a83d9450>]"
+       "[<matplotlib.lines.Line2D at 0x296cc931450>]"
       ]
      },
      "execution_count": 5,
@@ -95,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x177aa600190>]"
+       "[<matplotlib.lines.Line2D at 0x296ceb60190>]"
       ]
      },
      "execution_count": 7,
@@ -120,13 +120,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -143,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -154,12 +147,12 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  df_ball_positions['ball_hit'].iloc[i] = 1\n",
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: SettingWithCopyWarning: \n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_ball_positions['ball_hit'].iloc[i] = 1\n",
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -170,12 +163,12 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  df_ball_positions['ball_hit'].iloc[i] = 1\n",
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: SettingWithCopyWarning: \n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_ball_positions['ball_hit'].iloc[i] = 1\n",
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -186,12 +179,12 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  df_ball_positions['ball_hit'].iloc[i] = 1\n",
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: SettingWithCopyWarning: \n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_ball_positions['ball_hit'].iloc[i] = 1\n",
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -202,12 +195,12 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  df_ball_positions['ball_hit'].iloc[i] = 1\n",
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: SettingWithCopyWarning: \n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_ball_positions['ball_hit'].iloc[i] = 1\n",
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -218,7 +211,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  df_ball_positions['ball_hit'].iloc[i] = 1\n",
-      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_23208\\3752280353.py:18: SettingWithCopyWarning: \n",
+      "C:\\Users\\Sandra\\AppData\\Local\\Temp\\ipykernel_18568\\3752280353.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
